add example env and make production

--- a/views/customer/products/product-details.ejs
+++ b/views/customer/products/product-details.ejs
@@ -24,10 +24,12 @@
       <h3>Description</h3>
       <p id="product-description"><%= product.description %></p>
     </section>
+    <% if (false) { %>
     <section>
       <h3>Reviews</h3>
       <p>No reviews yet...</p>
     </section>
+    <% } %>
   </main>
   <%- include('includes/footer') %>
 </body>
