--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -21,8 +21,9 @@
 .cart-item img {
   width: 7.5rem;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: var(--border-radius-large);
+  background-color: white;
 }
 
 .cart-item-info {
@@ -142,8 +143,9 @@
   .cart-item img {
     width: 100%;
     height: 12.5rem;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: var(--border-radius-large);
+    background-color: white;
   }
 
   .cart-item-info {
