update failure message

--- a/views/customer/orders/failure.ejs
+++ b/views/customer/orders/failure.ejs
@@ -3,9 +3,9 @@
 <body>
   <%- include('includes/header') %>
   <main>
-    <h1>Order has not been placed!</h1> 
+    <h1>Order has not been placed.</h1> 
     <section>
-      <p>Unfortunately, something went wrong... Please try again</p>
+      <p>You either cancelled your order or something went wrong with your payment...</p>
       <p><a href="/cart">Go to my cart</a></p>
     </section>
   </main>
