update paragraph when user cancels order

--- a/views/customer/orders/failure.ejs
+++ b/views/customer/orders/failure.ejs
@@ -5,7 +5,7 @@
   <main>
     <h1>Order has not been placed.</h1> 
     <section>
-      <p>You either cancelled your order or something went wrong with your payment...</p>
+      <p>You cancelled your order.</p>
       <p><a href="/cart">Go to my cart</a></p>
     </section>
   </main>
