add test payment card credentials

--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -116,11 +116,11 @@
   margin: 0;
 }
 
-.cart-total p:nth-of-type(1) {
+.cart-total p.total {
   font-size: 1.25rem;
   font-weight: 700;
   color: var(--color-primary-400);
-  margin-bottom: var(--space-2); 
+  margin-bottom: var(--space-2);
 }
 
 .cart-item-buttons {
@@ -131,6 +131,78 @@
 .cart-item-buttons button {
   margin: var(--space-1);
   margin-right: 0;
+}
+
+.demo-card-info {
+  width: 100%;
+  background-color: var(--color-gray-400);
+  /* border: 1px solid var(--color-primary-200); */
+  border-radius: 10px;
+  padding: var(--space-4);
+  margin-bottom: var(--space-4)
+}
+
+.demo-card-info h2 {
+  margin: 0 0 var(--space-2) 0;
+  padding: 0;
+}
+
+.demo-card-info p {
+  margin: 0;
+  padding: 0.2rem 0;
+}
+
+.demo-card-info input {
+  box-sizing: border-box;
+  height: 2.25rem;
+  padding: var(--space-1);
+  margin-top: var(--space-2);
+  margin-right: var(--space-2);
+  font-size: 1.1rem;
+  text-align: center;
+  border-radius: var(--border-radius-medium);
+  border: 2px solid var(--color-primary-200);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 140px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
 
 @media (max-width: 48rem) {
@@ -165,6 +237,10 @@
   .cart-total button {
     width: 100%;
     height: 3rem;
+  }
+
+  .demo-card-info button {
+    height: 2.25rem;
   }
 
   .cart-total {
