--- a/views/customer/cart/includes/cart-item.ejs
+++ b/views/customer/cart/includes/cart-item.ejs
@@ -25,6 +25,7 @@
         value="<%= item.quantity %>"
         required
         disabled
+        aria-label="quantity of <%= item.product.title %>"
       />
       <button data-action="increase" class="btn btn-alt">+</button>
     </div>
